--- a/src/web/templates/management_report_web.html
+++ b/src/web/templates/management_report_web.html
@@ -223,7 +223,7 @@
     
     <!-- Export Actions -->
     <div class="export-actions">
-        <a href="/management-report" class="btn btn-primary">📧 Email Version</a>
+        <a href="/management-report-nord" class="btn btn-primary">❄️ Nord Version</a>
         <button onclick="window.print()" class="btn btn-secondary">🖨️ Print</button>
     </div>
     
