refactor working on month totals

--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -532,7 +532,7 @@
     <!-- Breadcrumb -->
     <div class="breadcrumb">
         <div class="breadcrumb-container">
-            <a href="/">Home</a>
+            <a href="/reports">Home</a>
             {% block breadcrumb %}{% endblock %}
         </div>
     </div>
